--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,7 @@
         <li><strong>Revenue:</strong> <%= @project.revenue %></li>
         <li><strong>Costs:</strong> <%= @project.costs %></li>
         <li><strong>Profit:</strong> <%= @project.profit %></li>
+        <li><strong>Profit Margin:</strong> <%= @project.profit_margin %></li>
       <ul>
     </div>
   </div>
