--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <div class="notice"><%= notice %></div>
   <div class="alert"><%= alert %></div>
-
+  <%= render "shared/header" %>
   <div class="container">
     <%= yield %>
   </div>
