--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,9 @@
 
   <div class="notice"><%= notice %></div>
   <div class="alert"><%= alert %></div>
-  <%= render "shared/header" %>
+  <%= render "shared/header" if current_user %>
   <div class="container">
     <%= yield %>
   </div>
-
 </body>
 </html>
