--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -20,28 +20,26 @@
     <thead>
       <tr>
         <th>Team Member</th>
-        <th>Available Hours</th>
-        <th>Actual Hours</th>
-        <th>Utilization %</th>
+        <th>Target Billable Ratio</th>
+        <th>Actual Billable Ratio</th>
+        <th>Variance to Target Ratio</th>
+        <th>Target Hours</th>
+        <th>Hours Billed</th>
+        <th>Variance to Target Hours %</th>
       </tr>
     </thead>
     <tbody>
-      <% @key_metrics.hours_by_employee.each do |hash| %> 
+      <% @key_metrics.hours_by_employee.each do |employee_metrics| %> 
         <tr>
-          <td><%= hash[:employee].name %></td>
-          <td><%= number_with_precision(hash[:available_hours], precision: 0) %></td>
-          <td><%= number_with_precision(hash[:hours_billed], precision: 0) %></td>
-          <td class="<%= 'red' if hash[:variance] < 0 %>"><%= number_with_precision(hash[:variance], precision: 0) %></td>
-          <td><%= number_to_percentage(hash[:utilization], precision: 0) %></td>
+          <td><%= employee_metrics.team_member.name %></td>
+          <td><%= number_to_percentage(employee_metrics.target_billable_ratio * 100, precision: 0) %></td>
+          <td><%= number_to_percentage(employee_metrics.actual_billable_ratio * 100, precision: 0) %></td>
+          <td class="<%= 'red' if employee_metrics.variance_to_target_ratio < 0 %>"><%= number_to_percentage(employee_metrics.variance_to_target_ratio * 100, precision: 0) %></td>
+          <td><%= number_with_precision(employee_metrics.target_hours, precision: 0) %></td>
+          <td><%= number_with_precision(employee_metrics.hours_billed, precision: 0) %></td>
+          <td class="<%= 'red' if employee_metrics.variance_to_target_hours < 0 %>"><%= number_with_precision(employee_metrics.variance_to_target_hours, precision: 0) %></td>
         </tr>
       <% end %>
-      <tr>
-        <td><strong>Total</strong></td>
-        <td><%= number(@key_metrics_no_contractors.available_hours_of_employees) %></td>
-        <td><%= number(@key_metrics_no_contractors.hours_billed) %></td>
-        <td><%= number(@key_metrics_no_contractors.hours_variance) %></td>
-        <td><%= number_to_percentage(@key_metrics_no_contractors.utilization * 100, precision: 0) %></td>
-      </tr>
     </tbody>
   </table>
 </div>
