--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,14 +3,56 @@
 </div>
 
 <div class="row">
-  <h2>Gross Profit Performance</h2>
+  <h2>Overall Performance</h2>
   <ul>
-    <li> Total Hours Billed: <%= number(@key_metrics.hours_billed) %> </li>
-    <li> Total Revenue: <%= number_to_currency(@key_metrics.revenue, precision: 0) %></li>
-    <li> Total Effective Rate: <%= number_to_currency(@key_metrics.effective_rate, precision: 0) %></li>
-    <li> Total Utilization: <%= number_to_percentage(@key_metrics_no_contractors.utilization * 100, precision: 0) %></li>
-    <li> Total Hours Billed w/o Contractors: <%= number(@key_metrics_no_contractors.hours_billed) %></li>
+    <li>Total Hours Billed: <%= number(@key_metrics.hours_billed) %> </li>
+    <li>Employee Hours Billed: <%= number(@key_metrics_no_contractors.hours_billed) %> </li>
+    <li>Target Employee Hours:  </li>
+    <li>Total Revenue: <%= number_to_currency(@key_metrics.revenue, precision: 0) %></li>
+    <li>Total Effective Rate: </li>
+    <li>Utilization: <%= number_to_percentage(@key_metrics_no_contractors.net_utilization * 100, precision: 0) %></li>
   </ul>
+
+  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>Metric</th>
+        <th>Actual</th>
+        <th>Target</th>
+        <th>Variance</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Total Hours (including contractors)</td>
+        <td><%= number(@key_metrics.hours_billed) %></td>      
+        <td>-</td>
+        <td>-</td>
+      </tr>
+      <tr>
+        <td>Employee Hours</td>
+        <td><%= number(@key_metrics_no_contractors.hours_billed) %></td>      
+        <td><%= number(@key_metrics_no_contractors.target_hours_of_employees) %></td>
+        <td class="<%= 'red' if @key_metrics_no_contractors.target_hours_variance_percentage < 0 %>">
+          <%= number_to_percentage(@key_metrics_no_contractors.target_hours_variance_percentage * 100, precision: 0) %>
+        </td>
+      </tr>
+      <tr>
+        <td>Revenue</td>
+        <td><%= number_to_currency(@key_metrics.revenue, precision: 0) %></td>      
+        <td>-</td>
+        <td>-</td>
+      </tr> 
+      <tr>
+        <td>Effective Rate</td>
+        <td><%= number_to_currency(@key_metrics.effective_rate, precision: 0) %></td>      
+        <td>$160</td>
+        <td class="<%= 'red' if @key_metrics.effective_rate_variance_percentage < 0 %>">
+          <%= number_to_percentage(@key_metrics.effective_rate_variance_percentage * 100, precision: 0) %>
+        </td>
+      </tr>                 
+    </tbody>
+  </table>  
 </div>
 
 <div class="row">
@@ -20,24 +62,23 @@
     <thead>
       <tr>
         <th>Team Member</th>
-        <th>Available Hours</th>
         <th>Actual Hours</th>
-        <th>Utilization %</th>
+        <th>Target Hours</th>
+        <th>Variance</th>
       </tr>
     </thead>
     <tbody>
-      <% @key_metrics.hours_by_employee.each do |hash| %> 
+      <% @key_metrics.hours_by_employee.each do |employee_metrics| %> 
         <tr>
-          <td><%= hash[:employee].name %></td>
-          <td><%= number_with_precision(hash[:available_hours], precision: 0) %></td>
-          <td><%= number_with_precision(hash[:hours_billed], precision: 0) %></td>
-          <td class="<%= 'red' if hash[:variance] < 0 %>"><%= number_with_precision(hash[:variance], precision: 0) %></td>
-          <td><%= number_to_percentage(hash[:utilization], precision: 0) %></td>
+          <td><%= employee_metrics.employee.name %></td>
+          <td><%= number_with_precision(employee_metrics.hours_billed, precision: 0) %></td>
+          <td><%= number_with_precision(employee_metrics.target_hours, precision: 0) %></td>
+          <td class="<%= 'red' if employee_metrics.variance < 0 %>"><%= number_with_precision(employee_metrics.variance, precision: 0) %></td>
         </tr>
       <% end %>
       <tr>
         <td><strong>Total</strong></td>
-        <td><%= number(@key_metrics_no_contractors.available_hours_of_employees) %></td>
+        <td><%= number(@key_metrics_no_contractors.target_hours_of_employees) %></td>
         <td><%= number(@key_metrics_no_contractors.hours_billed) %></td>
         <td><%= number(@key_metrics_no_contractors.hours_variance) %></td>
         <td><%= number_to_percentage(@key_metrics_no_contractors.utilization * 100, precision: 0) %></td>
