--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,23 +1,36 @@
+<div class="row">
+  <h1>Clients</h1>
+</div>
 
-<table class="table table-condensed">
-  <thead>
-    <tr>
-      <th>Client</th>
-      <th>Total Invoiced</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @clients.each do |client| %>
-      <% invoices = @invoices[client.id] %>
-      <% next unless invoices.present? %>   
+<div class="row">
+  <table class="table table-condensed">
+    <thead>
       <tr>
-        <td><%= client.name %></td>
-        <td><%= number_to_currency(invoices.sum(&:amount), precision: 0) %></td>
+        <th>Client</th>
+        <th>Revenue (Invoiced)</th>
+        <th>Effective Rate</th>
+        <th>Gross Cost</th>
+        <th>Gross Profit</th>
       </tr>
-    <% end %>
-    <tr>
-      <td><strong>Total</strong></td>
-      <td><strong><%= number_to_currency(@invoices.values.flatten.sum(&:amount), precision: 0) %><strong></td>
-    </tr>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @clients_key_metrics.each do |client_key_metrics| %>
+        <% next unless client_key_metrics.client_invoices.any? %>   
+        <tr>
+          <td><%= client_key_metrics.client.name %></td>
+          <td><%= number_to_currency(client_key_metrics.revenue, precision: 0) %></td>
+          <td><%= number_to_currency(client_key_metrics.effective_rate, precision: 0) %></td>
+          <td><%= number_to_currency(client_key_metrics.gross_cost, precision: 0) %></td>
+          <td><%= number_to_currency(client_key_metrics.gross_profit, precision: 0) %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td><strong>Total</strong></td>
+        <td><strong><%= number_to_currency(@key_metrics.revenue, precision: 0) %><strong></td>
+        <td><strong><%= number_to_currency(@key_metrics.effective_rate, precision: 0) %><strong></td>
+        <td><strong><%= number_to_currency(@clients_key_metrics.map(&:gross_cost).sum, precision: 0) %><strong></td>
+        <td><strong><%= number_to_currency(@clients_key_metrics.map(&:gross_profit).sum, precision: 0) %><strong></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
