--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,15 +4,6 @@
 
 <div class="row">
   <h2>Overall Performance</h2>
-  <ul>
-    <li>Total Hours Billed: <%= number(@key_metrics.hours_billed) %> </li>
-    <li>Employee Hours Billed: <%= number(@key_metrics_no_contractors.hours_billed) %> </li>
-    <li>Target Employee Hours: <%= number(@key_metrics_no_contractors.target_hours_of_employees) %></li>
-    <li>Hours Miss in Revenue: <%= number_to_currency(@key_metrics_no_contractors.miss_in_revenue_from_hours_miss, precision: 0) %></li>
-    <li>Total Revenue: <%= number_to_currency(@key_metrics.revenue, precision: 0) %></li>
-    <li>Total Effective Rate: <%= number_to_currency(@key_metrics.effective_rate, precision: 0) %></li>
-    <li>Utilization: <%= number_to_percentage(@key_metrics_no_contractors.net_utilization * 100, precision: 0) %></li>
-  </ul>
 
   <table class="table table-condensed">
     <thead>
@@ -31,9 +22,12 @@
         <td>-</td>
       </tr>
       <tr>
-        <td>Employee Hours</td>
-        <td><%= number(@key_metrics_no_contractors.hours_billed) %></td>      
-        <td><%= number(@key_metrics_no_contractors.target_hours_of_employees) %></td>
+        <td>Employee Utilization</td>
+        <td>
+          <%= number_to_percentage(@key_metrics_no_contractors.net_utilization * 100, precision: 0) %> (<%= number(@key_metrics_no_contractors.hours_billed) %> hours)
+        </td>      
+        <td>
+          83% (<%= number(@key_metrics_no_contractors.target_hours_of_employees) %> hours)</td>
         <td class="<%= 'red' if @key_metrics_no_contractors.target_hours_variance_percentage < 0 %>">
           <%= number_to_percentage(@key_metrics_no_contractors.target_hours_variance_percentage * 100, precision: 0) %>
         </td>
@@ -54,38 +48,4 @@
       </tr>                 
     </tbody>
   </table>  
-</div>
-
-<div class="row">
-  <h2>Utilization by Team Member</h2>
-
-  <table class="table table-condensed">
-    <thead>
-      <tr>
-        <th>Team Member</th>
-        <th>Actual Hours</th>
-        <th>Target Hours</th>
-        <th>Variance</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @key_metrics.hours_by_employee.each do |employee_metrics| %> 
-        <tr>
-          <td><%= employee_metrics.employee.name %></td>
-          <td><%= number_with_precision(employee_metrics.hours_billed, precision: 0) %></td>
-          <td>
-            <%= number_with_precision(employee_metrics.target_hours, precision: 0) %> 
-              <i class="allocation-percent">(<%= number_to_percentage(employee_metrics.employee.billable_target_ratio * 100, precision: 0) %> billable)</i>
-            </td>
-          <td class="<%= 'red' if employee_metrics.variance < 0 %>"><%= number_with_precision(employee_metrics.variance, precision: 0) %></td>
-        </tr>
-      <% end %>
-      <tr>
-        <td><strong>Total</strong></td>
-        <td><%= number(@key_metrics_no_contractors.hours_billed) %></td>
-        <td><%= number(@key_metrics_no_contractors.target_hours_of_employees) %></td>
-        <td><%= number(@key_metrics_no_contractors.hours_variance) %></td>
-      </tr>
-    </tbody>
-  </table>
 </div>
