--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,19 @@
 .filters {
   padding-top: 10px;
   margin-left: 50px;
+
+  .datepicker {
+    width: 100px;
+  }
+
+  label {
+    font-weight: normal;
+    margin-left: 10px;
+  }
+
+  .submit-button {
+    margin-left: 10px;
+  }
 }
 
 .red {
@@ -13,10 +26,4 @@
 
 .allocation-percent {
   font-size: 10px;
-}
-
-.filters {
-  .datepicker {
-    width: 100px;
-  }
 }
