--- a/app/views/team_members/show.html.erb
+++ b/app/views/team_members/show.html.erb
@@ -3,6 +3,15 @@
 </div>
 
 <div class="row">
+  <h2># Tasks by Week</h2>
+  <%= line_chart @employee_key_metrics.employee_completed_tasks.group_by_week(:completed_on).count %>
+</div>
+<div class="row">
+  <h2>Dev Days by Week</h2>
+  <%= line_chart @employee_key_metrics.employee_completed_tasks.group_by_week(:completed_on).sum(:dev_days) %>
+</div>
+
+<div class="row">
   <table class="table table-condensed">
     <thead>
       <tr>
