--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,6 +8,7 @@
       <tr>
         <th>Client</th>
         <th>Revenue (Invoiced)</th>
+        <th>Velocity</th>
         <th>Effective Rate</th>
         <th>Gross Cost</th>
         <th>Gross Profit</th>
@@ -22,6 +23,7 @@
       <tr>
         <td><strong>Total</strong></td>
         <td><strong><%= number_to_currency(@key_metrics.revenue, precision: 0) %><strong></td>
+        <td><strong><%= number_with_precision(@key_metrics.velocity, precision: 1) %><strong></td>
         <td><strong><%= number_to_currency(@key_metrics.effective_rate, precision: 0) %><strong></td>
         <td><strong><%= number_to_currency(@key_metrics.gross_cost, precision: 0) %><strong></td>
         <td><strong><%= number_to_currency(@key_metrics.gross_profit, precision: 0) %><strong></td>
