updated the pulse survey

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,18 @@
   color: red;
 }
 
+.green {
+  color: green;
+}
+
+.orange {
+  color: orange;
+}
+
+.centered {
+  text-align: center;
+}
+
 .allocation-percent {
   font-size: 10px;
 }
