--- a/app/views/feedback_requests/success.html.erb
+++ b/app/views/feedback_requests/success.html.erb
@@ -1,9 +1,14 @@
 <div class="container container--padded text-center">
   <div class="header">
-    <%= image_tag("checkmark-circle.svg", width: "105px", class: "img--margin-bottom") %>
-
+    <svg width="105" height="105" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+      <g>
+        <g id="check_x5F_alt">
+          <path style="fill:#1E60BD;" d="M16,0C7.164,0,0,7.164,0,16s7.164,16,16,16s16-7.164,16-16S24.836,0,16,0z M13.52,23.383    L6.158,16.02l2.828-2.828l4.533,4.535l9.617-9.617l2.828,2.828L13.52,23.383z"/>
+        </g>
+      </g>
+    </svg>
     <h1>Thank you for your feedback!</h1>
 
-    <h4>We appreciate your feedback. We're always looking to improve and ensure that we're delivering the best possible experience. Our leadership team will review the aggregated monthly results and use this pulse as an indicator of how we're performing hosistically. Thanks again for your input!</h4>
+    <h4>We appreciate your feedback. We're always looking to improve and ensure that we're delivering the best possible experience. Thanks again for your input!</h4>
   </div>
 </div>
