--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <div class="notice"><%= notice %></div>
   <div class="alert"><%= alert %></div>
-  <%= render "shared/header" if current_user %>
+  <%= render "shared/header" if current_user && controller_name != "feedback_requests" %>
   <div class="container">
     <%= yield %>
   </div>
