--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,14 @@
 </head>
 <body>
 
-
-  <div class="notice"><%= notice %></div>
-  <div class="alert"><%= alert %></div>
+  <% if notice %>
+    <div class="notice"><%= notice %></div>
+  <% end %>
+  <% if alert %>
+    <div class="alert"><%= alert %></div>
+  <% end %>
   <%= render "shared/header" if current_user && controller_name != "feedback_requests" %>
-  <div class="container">
+  <div class="container mt-5">
     <%= yield %>
   </div>
 </body>
