--- a/app/views/feedback_requests/success.html.erb
+++ b/app/views/feedback_requests/success.html.erb
@@ -1,5 +1,5 @@
-<div class="container container--padded text-center">
-  <div class="header">
+<div class="px-5 py-5 my-5 text-center">
+  <div class="mb-3">
     <svg width="105" height="105" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
       <g>
         <g id="check_x5F_alt">
@@ -7,8 +7,7 @@
         </g>
       </g>
     </svg>
-    <h1>Thank you for your feedback!</h1>
-
-    <h4>We appreciate your feedback. We're always looking to improve and ensure that we're delivering the best possible experience. Thanks again for your input!</h4>
   </div>
+  <h1 class="display-5 fw-bold mb-3">Thank you for your feedback!</h1>
+  <p class="lead mb-4">We appreciate your feedback. At LaunchPad Lab, we believe candid feedback is essential to building world-class digital solutions. Your feedback will help make sure we are doing everything possible to improve both this engagement and the company at large.</p>
 </div>
