--- a/app/views/shared/_filters.html.erb
+++ b/app/views/shared/_filters.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :report, url: update_report_path, html: { class: 'form-inline' } do |f| %>
+<%= form_for :report, url: update_report_path, html: { class: 'd-flex' } do |f| %>
   <div class="form-group">
     <%= f.label :start_date %>
     <%= f.text_field :start_date, class: 'datepicker', value: @start_date.strftime('%m/%d/%Y') %>
