--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,23 +1,14 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Consulting KPIs</a>
-    </div>
+    <a class="navbar-brand" href="/">KPIs</a>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="<%= 'active' if action_name == 'dashboard' %>"><%= link_to "Dashboard", dashboard_path %></li>
-        <li class="<%= 'active' if action_name == 'team_members' %>"><%= link_to "Employees", team_members_path %></li>
-        <li class="<%= 'active' if controller_name == 'clients' && action_name == 'index' %>"><%= link_to "Clients", clients_path %></li> 
-        <li ><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><%= link_to "Dashboard", dashboard_path, class: "nav-link #{'active' if action_name == 'dashboard'}" %></li>
+        <li class="nav-item"><%= link_to "Employees", team_members_path, class: "nav-link #{'active' if controller_name == 'team_members'}" %></li>
+        <li class="nav-item"><%= link_to "Clients", clients_path, class: "nav-link #{'active' if controller_name == 'clients' && action_name == 'index'}" %></li> 
+        <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, class: "nav-link", method: :delete %></li>
         <li class="filters">
           <%= render 'shared/filters' %>
         </li>
